# Threatscope

./: .env.example  .gitignore  CNAME  Dockerfile  LICENSE  README.md  START.sh  dashboard.html  docker-compose.yml  fix_logs.py  generate_logs.py  index.html  main.py  main.py.bak  main_streaming.py  main_streaming.py.bak  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.sh  threatscope.py
.github/workflows/: ci.yml
ai_engine/: __init__.py  anomaly_model.py  confidence.py  detector.py  severity.py
config/: __init__.py  settings.py
correlation/: hybrid_decision.py  mitre_enricher.py  rule_engine.py
docs/: AI_COPILOT.md  index.html
evaluation/: ground_truth.py  metrics.py
explain/: __init__.py  counterfactual.py  explain_engine.py  explainer.py  learn_mode.py
ids/: ids_engine.py
ingestion/: elastic_writer.py  kafka_consumer.py  kafka_producer.py  log_reader.py  parser.py
intel/: mitre_mapping.py  threat_intel.py
ips/: ips_engine.py
logs/: metrics.json  sample_logs.txt
mitre/: mappings.py
recon/: feature_extractor.py  narrative_timeline.py  narrative_view.py  recon_detector.py  time_window_features.py  timeline.py  timeline_view.py
simulation/: recon_simulator.py  run_simulation.py  write_logs.py
tests/: __init__.py  conftest.py  test_anomaly_model.py  test_features.py  test_ids_engine.py  test_ips_engine.py  test_metrics.py  test_mitre_enricher.py  test_parser.py
tests/unit/: test_basic.py
ui/: ai_copilot_demo.html  index.html  metrics.json  severity_style.py
